--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -50,7 +50,7 @@
     <div flex="100" flex-gt-sm="40" layout="row" layout-align="center center" ng-class="{'null': menu_title == 'Projects', 'null': menu_title == 'People', 'null': menu_title == 'Services'}">
     	
 
-    	<div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-show="menu_title == 'Projects'">
+    	<div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'Projects'">
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="175px" md-row-height-gt-sm="200px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in projectslist | limitTo: -6" md-rowspan="1" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
@@ -63,10 +63,10 @@
             </div>
         </div>
 
-        <div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-show="menu_title == 'People'">
+        <div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'People'">
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="175px" md-row-height-gt-sm="200px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
-                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 3" md-rowspan="3" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false">
+                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 3" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="2" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false">
                         <img ng-src="{{tile.source}}" style="width: auto; max-width:300%; min-height: 100%;">
                         <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                     </md-grid-tile>
@@ -74,7 +74,7 @@
             </div>
         </div>
 
-        <div ng-show="menu_title == 'Services'" layout="row" layout-align="center center" flex="100" layout-margin class="container navigation widget" style="min-width: 100%;">
+        <div ng-if="menu_title == 'Services'" layout="row" layout-align="center center" flex="100" layout-margin class="container navigation widget" style="min-width: 100%;">
             <div class="md-whiteframe-8dp" flex="100" layout="row" layout-align="center start" style="z-index: 2; position: relative; background: {{base_hue_lightest.value}}; margin-bottom: 48px;">
                 <div style="text-align: center">
                     <div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
@@ -86,7 +86,7 @@
                     <md-card-content>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input">
-                                <label style="color: {{base_hue_lightest.value}}!important">Full Name</label>
+                                <label>Full Name</label>
                                 <input name="name" ng-model="navForm.name" minlength="4" required>
                                 <div ng-messages="navigation.name.$error" ng-show="navigation.name.$dirty">
                                     <div ng-message="required">Name required!</div>
@@ -96,7 +96,7 @@
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input">
-                                <label style="color: {{base_hue_lightest.value}}!important">Email</label>
+                                <label>Email</label>
                                 <input type="email" name="email" ng-model="navForm.email" required>
                                 <div ng-messages="navigation.email.$error" ng-show="navigation.email.$dirty">
                                     <div ng-message="required">Email required!</div>
@@ -106,7 +106,7 @@
                         </md-list-item>
                         <md-list-item>
                             <md-input-container class="md-block lightweight-md-input" flex>
-                                <label style="color: {{base_hue_lightest.value}}!important">Message</label>
+                                <label>Message</label>
                                 <textarea name="message" md-detect-hidden="true" ng-model="navForm.message" rows="3" minlength="10" md-maxlength="250" required></textarea>
                                 <div ng-messages="navigation.message.$error" ng-show="navigation.message.$dirty">
                                     <div ng-message="required">Message required!</div>
