--- a/lib/client/app/application/pages/team/partials/team-template.html
+++ b/lib/client/app/application/pages/team/partials/team-template.html
@@ -54,14 +54,14 @@
 	    			<img ng-src="{{team_member.source || '/assets/design/missing-person-image.gif'}}" class="md-card-image team-member-image-popup-desktop" ng-class="{'team-member-popup-image': window_width < 960}" alt="Team member {{team_member.name}}" style="height: auto; width: auto;">
 	    		</div>
 	    		<div flex="100" flex-gt-sm="60" layout="row" layout-align="center center" layout-padding ng-attr-style="background-color: {{base_hue_lightest.value}};">
-	    			<div>
+	    			<div style="padding: 64px;">
 	    				<h5 ng-attr-style="color: {{base_hue_darkest.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">{{team_member.name || 'Team Member\'s Name'}}</h5>
 			    		<h5 ng-attr-style="color: {{base_hue_darkest.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">{{team_member.title || 'Position | Title'}}</h5>
-				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">Q: What do you find rewarding?</h5>
+				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">Q: What do you find rewarding?</h5>
 				    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[0] || "I'm busy doing just that..."}}</p>
-				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">Q: What was your first job?</h5>
+				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">Q: What was your first job?</h5>
 				    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[1] || "I'll get back to you!"}}</p>
-				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-style: italic; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">Q: Provide one fun fact about yourself!</h5>
+				    	<h5 ng-attr-style="color: {{primary_hue_normal.value}}; font-size: 24px; margin-top: 16px; margin-bottom: 16px; font-weight: normal;">Q: Provide one fun fact about yourself!</h5>
 				    	<p ng-attr-style="color: {{base_hue_darkest.value}}">A: {{team_member.QA[2] || 'This is where things will get interesting...'}}</p>
 			    	</div>
 	    		</div>
