--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -17,6 +17,12 @@
     }
     .navigation.widget md-input-container {margin: 8px 0!important;}
     .navigation.widget md-input-container.md-default-theme .md-input, .navigation.widget md-input-container .md-input {color: {{base_hue_lightest.value}}!important;}
+    .navigation.widget.staff img {
+        transition: transform 2s ease-in-out;
+    }
+    .navigation.widget.staff img.active {
+        transform: scale(0.7);
+    }
 </style>
 
 <md-card ng-show="sub_navigation_panel" flex="100" layout="row" layout-align="center start" layout-align-gt-sm="center center" layout-wrap class="sub-navigation dropdown md-whiteframe-8dp" ng-attr-style="overflow: hidden; overflow-y: auto; position: fixed; background: {{base_hue_darkest.value}}; width: {{scroll_bar_aware_window_width}}px; margin: 0;" ng-class="{'section-3-ms-explorer': browser == 'ie', 'open': sub_navigation_panel, 'close': !sub_navigation_panel}">
@@ -64,12 +70,14 @@
             </div>
         </div>
 
-        <div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'People'">
+        <div class="container navigation widget staff" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'People'">
             <div flex="100" layout-margin>
-                <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="125px" md-row-height-gt-sm="90px" md-row-height="150px" md-gutter="8px" md-gutter-gt-sm="4px">
+                <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="125px" md-row-height-gt-sm="90px" md-row-height="200px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 4" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
-                        <img ng-src="{{tile.source}}" style="width: auto; max-width:300%; min-height: 100%; margin-top: 288px; filter: grayscale(100%);">
-                        <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
+                        <a href="/meet-our-people">
+                            <img ng-src="{{tile.source}}" ng-class="{'active': hovered}" style="width: auto; max-width:300%; min-height: 100%; margin-top: 304px; filter: grayscale(100%);">
+                            <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
+                        </a>
                     </md-grid-tile>
                 </md-grid-list>
             </div>
@@ -80,7 +88,7 @@
                 <div style="text-align: center">
                     <div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
                 </div>
-                <form name="navigation" class="md-whiteframe-8dp" ng-show="!progressAnimation" style="z-index: 2; position: relative; background: #424242; margin-bottom: 48px; margin-top: 36px;">
+                <form name="navigation" class="md-whiteframe-8dp" ng-show="!progressAnimation" style="z-index: 2; position: relative; background: rgba(55, 55, 55, 0.5); margin-bottom: 48px; margin-top: 36px;">
                     <div style="text-align: center">
                         <h1 style="color: {{base_hue_lightest.value}}!important;">Contact <span style="color: {{primary_hue_normal.value}}">MMA Today!</span></h1>
                     </div>
