--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -27,7 +27,7 @@
 
 <md-card ng-show="sub_navigation_panel" flex="100" layout="row" layout-align="center start" layout-align-gt-sm="center center" layout-wrap class="sub-navigation dropdown md-whiteframe-8dp" ng-attr-style="overflow: hidden; overflow-y: auto; position: fixed; background: {{base_hue_darkest.value}}; width: {{scroll_bar_aware_window_width}}px; margin: 0;" ng-class="{'section-3-ms-explorer': browser == 'ie', 'open': sub_navigation_panel, 'close': !sub_navigation_panel}">
 
-    <md-button class="md-icon-button" ng-click="close_menu()" style="position: absolute; top: 33px; right: 16px; z-navigation: 5; cursor: pointer;" aria-label="Close">
+    <md-button class="md-icon-button" ng-click="close_menu(); close_parent_menu()" style="position: absolute; top: 33px; right: 16px; z-navigation: 5; cursor: pointer;" aria-label="Close">
     	<md-icon ng-attr-style="color: {{base_hue_lightest.value}};">close</md-icon>
     </md-button>
 
@@ -61,7 +61,7 @@
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="150px" md-row-height-gt-sm="175px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in projectslist | limitTo: -6" md-rowspan="1" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
-                        <a href="{{tile.settings.url}}">
+                        <a href="{{tile.settings.url}}" ng-click="close_menu(); close_parent_menu()">
                             <img ng-src="{{tile.data.page.foreground.images.source}}" style="width: auto; max-width:300%; min-height: 100%;">
                             <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.data.title}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.data.title}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                         </a>
@@ -74,7 +74,7 @@
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="125px" md-row-height-gt-sm="90px" md-row-height="200px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 4" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
-                        <a href="/meet-our-people">
+                        <a href="/meet-our-people" ng-click="close_menu(); close_parent_menu()">
                             <img ng-src="{{tile.source}}" ng-class="{'active': hovered}" style="width: auto; max-width:300%; min-height: 100%; margin-top: 304px; filter: grayscale(100%);">
                             <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                         </a>
