--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -18,10 +18,10 @@
     .navigation.widget md-input-container {margin: 8px 0!important;}
     .navigation.widget md-input-container.md-default-theme .md-input, .navigation.widget md-input-container .md-input {color: {{base_hue_lightest.value}}!important;}
     .navigation.widget.staff img {
-        transition: transform 2s ease-in-out;
+        transition: transform .5s ease-in-out;
     }
     .navigation.widget.staff img.active {
-        transform: scale(0.7);
+        transform: scale(0.9);
     }
 </style>
 
@@ -74,10 +74,10 @@
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="125px" md-row-height-gt-sm="90px" md-row-height="200px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 4" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
-                        <a href="/meet-our-people" ng-click="close_menu(); close_parent_menu()">
+
                             <img ng-src="{{tile.source}}" ng-class="{'active': hovered}" style="width: auto; max-width:300%; min-height: 100%; margin-top: 304px; filter: grayscale(100%);">
                             <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
-                        </a>
+
                     </md-grid-tile>
                 </md-grid-list>
             </div>
