--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -72,6 +72,13 @@
 
         <div class="container navigation widget staff" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-if="menu_title == 'People'">
             <div flex="100" layout-margin>
+                <md-list flex="100">
+                    <md-list-item flex="100" layout-padding>
+                        <h2 ng-attr-style="color: {{base_hue_lightest.value}};">
+                            Our Leadership
+                        </h2>
+                    </md-list-item>
+                </md-list>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="125px" md-row-height-gt-sm="90px" md-row-height="200px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 4" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
 
@@ -84,11 +91,11 @@
         </div>
 
         <div ng-if="menu_title == 'Services'" layout="row" layout-align="center center" flex="100" layout-margin class="container navigation widget" style="min-width: 100%;">
-            <div flex="100" layout="row" layout-align="center start" style="z-index: 2;>
-                <div style="text-align: center">
-                    <div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
+            <div flex="100" layout="row" layout-align="center start" style="z-index: 2;">
+                <div style="text-align: center" ng-show="progressAnimation">
+                    <div ng-include src="'application/partials/loading-spinner.html'"></div>
                 </div>
-                <form name="navigation" class="md-whiteframe-8dp" ng-show="!progressAnimation" style="z-index: 2; position: relative; background: rgba(55, 55, 55, 0.5); margin-bottom: 48px; margin-top: 36px;">
+                <form name="navigation" class="md-whiteframe-8dp" ng-show="!progressAnimation" style="z-index: 2; position: relative; background: rgba(55, 55, 55, 0.5); margin-bottom: 48px; margin-top: 36px; width: 100%;">
                     <div style="text-align: center">
                         <h1 style="color: {{base_hue_lightest.value}}!important;">Contact <span style="color: {{primary_hue_normal.value}}">MMA Today!</span></h1>
                     </div>
