--- a/lib/client/app/application/partials/footer.html
+++ b/lib/client/app/application/partials/footer.html
@@ -84,13 +84,13 @@
 		</div>
 		<div layout-padding flex="100" flex-gt-sm="70" layout-align="end center">
 			<div flex layout="row" layout-align="end center" layout-wrap>
-				<div flex="50" flex-sm="25" flex-gt-sm="25">
+				<div flex="50" flex-sm="25" flex-gt-sm="25" layout="row" layout-align="end center">
 					<p ng-attr-style="color: {{base_hue_lightest.value}};">{{settings.data.company_name}} &#169; {{year}}</p>
 				</div>
-				<div flex="50" flex-sm="25" flex-gt-sm="25">
+				<div flex="50" flex-sm="25" flex-gt-sm="25" layout="row" layout-align="end center">
 					<a href="/info/privacy-policy"><p ng-attr-style="color: {{base_hue_lightest.value}};">Privacy &amp; Terms</p></a>
 				</div>
-				<div flex="100" flex-sm="50" flex-gt-sm="50">
+				<div flex="100" flex-sm="50" flex-gt-sm="50" layout="row" layout-align="end center">
 					<h1 class="type heading footer" ng-attr-style="display: inline-block; color: {{base_hue_lightest.value}};">Superpowered By Lightweight</h1>
 					<md-menu style="display: inline-block;">
 	                    <md-button aria-label="Lightweight menu" class="md-icon-button" ng-click="openMenu($mdMenu, $event)">
