--- a/lib/client/app/application/landing/partials/landing.html
+++ b/lib/client/app/application/landing/partials/landing.html
@@ -29,7 +29,7 @@
 		<!-- Item Carousel -->
 
 		<!-- Item Carousel -->
-		<!-- <div ng-include src="'application/landing/partials/slideshow_2.html'"></div> -->
+		<div ng-include src="'application/landing/partials/slideshow_2.html'"></div>
 		<!-- Item Carousel -->
 
 		<!-- Map With Contact Form Overlay -->
