--- a/lib/client/app/application/landing/partials/slideshow_2.html
+++ b/lib/client/app/application/landing/partials/slideshow_2.html
@@ -19,8 +19,8 @@
 <div class="lightweight-hero--slideshow component slideshow" hero-element style="position: relative;">
 	<span id="top" hash="top" style="position: absolute; top:-100px; left: 0; height: 1px; width: 1px;"></span>
 
-	<div class="slide--display" hero-slider-content-container ng-repeat="slide in secondary_slideshow_hero.images" orientation-aware>
-		<img class="slideshow_slide_image" alt="{{slide.alt}}" ng-src="{{slide.source}}" ng-class="{'slide-transition': $index == visible_slide}" ng-show="$index == visible_slide" style="display: block; margin: 0 auto;">
+	<div class="slide--display" hero-slider-content-container ng-repeat="slide in secondary_slideshow_hero.images" orientation-aware layout="row" layout-align="center center">
+		<img class="slideshow_slide_image md-whiteframe--6dp" alt="{{slide.alt}}" ng-src="{{slide.source}}" ng-class="{'slide-transition': $index == visible_slide}" ng-show="$index == visible_slide" style="display: block; margin: 0 auto;" flex="100">
 
 		<div ng-show="$index == visible_slide" style="position: absolute; height: 100%; width: 100%; top: 0; left: 0; z-index: 2;" layout="row" layout-align="center center" layout-wrap>
 		
