--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -5,10 +5,10 @@
 	<md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="close_lightweight_box()" style="position: absolute; top: 36px; right: 64px; background-color: {{primary_hue_normal.value}}!important;">
             <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
     </md-button>
-	<div flex="100" style="position: relative; height: 500px;">
-		<slick ng-if="projectImages.length"  responsive=slick_breakpoints infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false pauseOnFocus=false autoplay=true centerMode=true slides-to-show=1 touch-move=true slides-to-scroll=1 initialSlide=start_project_lightbox style="max-height: 500px; overflow: hidden">
+	<div flex="100" style="position: relative; height: 600px;">
+		<slick ng-if="projectImages.length"  responsive=slick_breakpoints infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false pauseOnFocus=false autoplay=true centerMode=true slides-to-show=1 touch-move=true slides-to-scroll=1 initialSlide={{start_project_lightbox}} style="max-height: 600px; overflow: hidden">
 		 <div ng-repeat="slide in projectImages">
-		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; width: auto!important; max-height: 500px!important; height: auto;">
+		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; width: auto!important; max-height: 600px!important; height: auto;">
 		 </div>
 		</slick>
 	</div>
