--- a/lib/client/app/application/pages/projects/partials/project-template.html
+++ b/lib/client/app/application/pages/projects/partials/project-template.html
@@ -6,10 +6,10 @@
             <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
     </md-button>
 	<div flex="100" style="position: relative; height: 600px;">
-		<slick ng-if="projectImages.length"  responsive=slick_breakpoints infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false pauseOnFocus=false autoplay=true centerMode=true slides-to-show=1 touch-move=true slides-to-scroll=1 initialSlide={{start_project_lightbox}} autoplaySpeed=6000 style="max-height: 600px; overflow: hidden">
-		 
-		 	<img ng-repeat="slide in projectImages" alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; width: auto!important; max-height: 600px!important; height: auto;">
-		 
+		<slick ng-if="projectImages.length" init-onload=true responsive=slick_breakpoints infinite=true speed=1000 mobileFirst=true waitForAnimate=false pauseOnHover=false pauseOnFocus=false autoplay=true centerMode=true slides-to-show=1 touch-move=true slides-to-scroll=1 initialSlide={{start_project_lightbox}} autoplaySpeed=6000 style="max-height: 600px; overflow: hidden">
+		 <div ng-repeat="slide in projectImages">
+		 	<img alt="{{slide.alt}}" class="slideshow_slide_image" ng-src="{{slide.source}}" style="display: block; margin: 0 auto; width: auto!important; max-height: 600px!important; height: auto;">
+		 </div>
 		</slick>
 	</div>
 </div>
